--- a/polybar_config.ini
+++ b/polybar_config.ini
@@ -18,6 +18,7 @@
 
 [colors]
 background = #0d0f1e
+; background = #de0d0f1e
 background-alt = #272d59
 foreground = #a1d8ff
 primary = #fff
@@ -25,9 +26,9 @@ secondary = #a1d8ff
 alert = #a1d8ff
 disabled = #707880
 
-[bar/example]
+[bar/bar]
 width = 100%
-height = 35
+height = 42
 radius = 6
 
 ; dpi = 96
@@ -38,10 +39,10 @@ foreground = ${colors.foreground}
 line-size = 3
 
 border-size = 6
-; border-color = #00000000
+; border-color = #000000
 
 padding-left = 1
-padding-right = 3
+padding-right = 4
 
 module-margin = 2
 
@@ -50,6 +51,10 @@ separator-foreground = ${colors.disabled}
 
 font-0 = Roboto:size=12;2
 font-1 = Roboto:style=Bold:size=12;2
+font-2 = Font Awesome 5 Free Solid:size=14;2
+font-3 = Font Awesome 5 Brands:size=14;2
+font-4 = Roboto:style=Bold:size=13;4
+font-5 = Roboto:style=Bold:size=14;2
 
 modules-left = bspwm xwindow
 modules-right = pulseaudio xkeyboard memory cpu date
@@ -58,33 +63,33 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-; tray-position = right
-
-; wm-restack = generic
 wm-restack = bspwm
-; wm-restack = i3
 
 ; override-redirect = true
 
 [module/bspwm]
 type = internal/bspwm
 
-label-active = %name%
+label-active = %icon%
 label-active-background = ${colors.background-alt}
 label-active-underline= #a1d8ff
 label-active-padding = 3
 
-label-occupied = %name%
+label-occupied = %icon%
 label-occupied-padding = 3
 
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 3
 
-label-empty = %name%
+label-empty = %icon%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 3
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-default = 
 
 [module/xwindow]
 type = internal/xwindow
@@ -95,23 +100,26 @@ label-foreground = #69fbff
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
+format-volume-prefix = "  "
+format-volume-prefix-foreground = "#8c66ff"
+; format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
+label-volume-foreground = ${colors.primary}
 label-volume-font = 2
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+label-muted = "muted"
+label-muted-foreground = "#ff6685"
+label-muted-font = 5
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
 
 label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-label-layout-font = 2
+label-layout-foreground = ${colors.foreground}
+label-layout-font = 6
 
 label-indicator-padding = 2
 label-indicator-margin = 1
@@ -121,17 +129,21 @@ label-indicator-background = ${colors.secondary}
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = "RAM "
-format-prefix-foreground = ${colors.primary}
+format-prefix = "  "
+format-prefix-foreground = "#66ffb8"
+#format-prefix-foreground = ${colors.foreground}
 label = %percentage_used:2%%
+label-foreground = ${colors.primary}
 label-font = 2
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = "CPU "
-format-prefix-foreground = ${colors.primary}
+format-prefix = "  "
+format-prefix-foreground = "#edff66"
+#format-prefix-foreground = ${colors.foreground}
 label = %percentage:2%%
+label-foreground = ${colors.primary}
 label-font = 2
 
 [network-base]
@@ -147,11 +159,10 @@ interval = 1
 
 date = %H:%M
 date-alt = %d %A %B %Y %H:%M:%S
-;date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
-label-foreground = ${colors.primary}
-label-font = 2
+label-foreground = ${colors.foreground}
+label-font = 6
 
 [settings]
 screenchange-reload = true
