Edit size & paddings fonts; remove sep

--- a/polybar_config.ini
+++ b/polybar_config.ini
@@ -28,8 +28,9 @@ disabled = #707880
 
 [bar/bar]
 width = 100%
-height = 42
+height = 40
 radius = 6
+fixed-center = true
 
 ; dpi = 96
 
@@ -46,14 +47,21 @@ padding-right = 4
 
 module-margin = 2
 
-separator = |
+separator = " "
 separator-foreground = ${colors.disabled}
 
+#MAIN FONT
 font-0 = Roboto:size=12;2
+# VALUE FONT
 font-1 = Roboto:style=Bold:size=12;2
+# ICON FONTS
 font-2 = Font Awesome 5 Free Solid:size=14;2
-font-3 = Font Awesome 5 Brands:size=14;2
-font-4 = Roboto:style=Bold:size=13;4
+font-3 = Font Awesome 5 Brands:size=14;1
+
+# XKEYBOARD FONT
+font-4 = Roboto:style=Bold:size=14;1
+
+# DATE FONT
 font-5 = Roboto:style=Bold:size=14;2
 
 modules-left = bspwm xwindow
@@ -94,7 +102,7 @@ ws-icon-default = 
 [module/xwindow]
 type = internal/xwindow
 label = %title%
-label-maxlen = 100
+label-maxlen = 75
 label-foreground = #69fbff
 
 [module/pulseaudio]
@@ -102,7 +110,6 @@ type = internal/pulseaudio
 
 format-volume-prefix = "  "
 format-volume-prefix-foreground = "#8c66ff"
-; format-volume-prefix-foreground = ${colors.foreground}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
@@ -111,7 +118,7 @@ label-volume-font = 2
 
 label-muted = "muted"
 label-muted-foreground = "#ff6685"
-label-muted-font = 5
+label-muted-font = 2
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -119,7 +126,7 @@ blacklist-0 = num lock
 
 label-layout = %layout%
 label-layout-foreground = ${colors.foreground}
-label-layout-font = 6
+label-layout-font = 5
 
 label-indicator-padding = 2
 label-indicator-margin = 1
@@ -131,7 +138,6 @@ type = internal/memory
 interval = 2
 format-prefix = "  "
 format-prefix-foreground = "#66ffb8"
-#format-prefix-foreground = ${colors.foreground}
 label = %percentage_used:2%%
 label-foreground = ${colors.primary}
 label-font = 2
@@ -145,13 +151,6 @@ format-prefix-foreground = "#edff66"
 label = %percentage:2%%
 label-foreground = ${colors.primary}
 label-font = 2
-
-[network-base]
-type = internal/network
-interval = 5
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
 [module/date]
 type = internal/date
