Add mpd to polybar

--- a/polybar_config.ini
+++ b/polybar_config.ini
@@ -18,7 +18,6 @@
 
 [colors]
 background = #0d0f1e
-; background = #de0d0f1e
 background-alt = #272d59
 foreground = #a1d8ff
 primary = #fff
@@ -43,7 +42,7 @@ border-size = 6
 ; border-color = #000000
 
 padding-left = 1
-padding-right = 4
+padding-right = 5
 
 module-margin = 2
 
@@ -51,21 +50,24 @@ separator = " "
 separator-foreground = ${colors.disabled}
 
 #MAIN FONT
-font-0 = Roboto:size=12;2
+font-0 = JetBrains Nerd Font:size=12;2
 # VALUE FONT
-font-1 = Roboto:style=Bold:size=12;2
+font-1 = JetBrains Nerd Font:style=Bold:size=12;2
 # ICON FONTS
 font-2 = Font Awesome 5 Free Solid:size=14;2
 font-3 = Font Awesome 5 Brands:size=14;1
 
 # XKEYBOARD FONT
-font-4 = Roboto:style=Bold:size=14;1
+font-4 = JetBrains Nerd Font:style=Bold:size=14;1
 
 # DATE FONT
-font-5 = Roboto:style=Bold:size=14;2
+font-5 = JetBrains Nerd Font:style=Bold:size=14;2
+
+# MPD FONT
+font-6 = JetBrains Nerd Font:size=14;4
 
 modules-left = bspwm xwindow
-modules-right = pulseaudio xkeyboard memory cpu date
+modules-right = mpd pulseaudio-control xkeyboard memory cpu date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -74,6 +76,87 @@ enable-ipc = true
 wm-restack = bspwm
 
 ; override-redirect = true
+
+[module/mpd]
+type = internal/mpd
+host = 127.0.0.1
+port = 6600
+interval = 1
+; Available tags:
+;   <label-song> (default)
+;   <label-time>
+;   <bar-progress>
+;   <toggle> - gets replaced with <icon-(pause|play)>
+;   <toggle-stop> - gets replaced with <icon-(stop|play)>
+;   <icon-random>
+;   <icon-repeat>
+;   <icon-repeatone> (deprecated)
+;   <icon-single> - Toggle playing only a single song. Replaces <icon-repeatone>
+;   <icon-consume>
+;   <icon-prev>
+;   <icon-stop>
+;   <icon-pause>
+;   <icon-next>
+;   <icon-seekb>
+;   <icon-seekf>
+;format-online = <icon-prev> <icon-seekb> <icon-stop> <toggle> <icon-seekf> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
+format-playing = ${self.format-online}
+format-paused = ${self.format-online}
+format-stopped = ${self.format-online}
+
+; Available tags:
+;   <label-offline>
+; Default: ""
+; format-offline = <label-offline>
+
+; Available tokens:
+;   %artist%
+;   %album-artist%
+;   %album%
+;   %date%
+;   %title%
+; Default: %artist% - %title%
+label-song =  %artist% - %title%
+
+; Available tokens:
+;   %elapsed%
+;   %total%
+; Default: %elapsed% / %total%
+;label-time = %elapsed% / %total%
+
+; Available tokens:
+;   None
+label-offline =   mpd is offline
+
+; Only applies if <icon-X> is used
+icon-play = 
+icon-pause = 
+icon-stop = 
+icon-prev = 
+icon-next = 
+icon-seekb = 
+icon-seekf = 
+icon-random = 
+icon-repeat = 
+icon-repeatone = 
+icon-single = 
+icon-consume = ✀
+
+; Used to display the state of random/repeat/repeatone/single
+; Only applies if <icon-[random|repeat|repeatone|single]> is used
+toggle-on-foreground = #ff
+toggle-off-foreground = #55
+
+; Only applies if <bar-progress> is used
+bar-progress-width = 45
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
+
+format-online = <toggle>  <label-song>
+label-font = 7
+
+click-right = "alacritty -e ncmpcpp"
 
 [module/bspwm]
 type = internal/bspwm
@@ -95,17 +178,17 @@ label-empty-foreground = ${colors.disabled}
 label-empty-padding = 3
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
+ws-icon-1 = 2;
 ws-icon-2 = 3;
 ws-icon-default = 
 
 [module/xwindow]
 type = internal/xwindow
 label = %title%
-label-maxlen = 75
+label-maxlen = 70
 label-foreground = #69fbff
 
-[module/pulseaudio]
+[module/pulseaudio-control]
 type = internal/pulseaudio
 
 format-volume-prefix = "  "
@@ -119,6 +202,9 @@ label-volume-font = 2
 label-muted = "muted"
 label-muted-foreground = "#ff6685"
 label-muted-font = 2
+
+click-right = pavucontrol &
+click-middle = bluetoothctl connect 08:E4:DF:31:5C:F6 &
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -166,5 +252,3 @@ label-font = 6
 [settings]
 screenchange-reload = true
 pseudo-transparency = true
-
-; vim:ft=dosini
