--- a/polybar_config.ini
+++ b/polybar_config.ini
@@ -67,7 +67,8 @@ font-5 = JetBrains Nerd Font:style=Bold:size=14;2
 font-6 = JetBrains Nerd Font:size=14;4
 
 modules-left = bspwm xwindow
-modules-right = mpd pulseaudio-control xkeyboard memory cpu date
+modules-right = pulseaudio-control xkeyboard memory cpu date
+modules-center = mpd
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -153,10 +154,8 @@ bar-progress-indicator = |
 bar-progress-fill = ─
 bar-progress-empty = ─
 
-format-online = <toggle>  <label-song>
+format-online = <toggle> <label-song>
 label-font = 7
-
-click-right = "alacritty -e ncmpcpp"
 
 [module/bspwm]
 type = internal/bspwm
